# LearnATAK

./: .gitignore  README.md
.github/workflows/: hugo.yml
demo-ai/: README.md
demo-camera/: .gitignore  README.md
demo-camera/app/: build.gradle
demo-camera/app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  yoloncnn.cpp
demo-cnn/: .gitignore
demo-cnn/app/: build.gradle
demo-food-classifier/: README.md
demo-food-classifier/app/: build.gradle
demo-fragments/app/: build.gradle
demo-hello-world/: .gitignore  README.md
demo-hello-world/app/: build.gradle
demo-hello-world/doc/: CoreComponents.md  Layouts.md  Mapping.md
demo-insect-classifier/: .gitignore  README.md
demo-insect-classifier/app/: build.gradle
demo-insect-classifier/scripts/: aiy_insects_V1_labelmap.csv  common_names.csv  insect.py
demo-plant-classifier/app/: build.gradle
demo-tflite/: .gitignore  README.md
demo-tflite/app/: build.gradle
demo-yds-estimator/: .gitignore
demo-yds-estimator/app/: build.gradle
democamera/: .gitignore  README.md
democamera/app/: build.gradle  proguard-gradle.txt
democnn/: .gitignore  README.md  gradle.properties
democnn/app/: build.gradle
democnn/app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolo.cpp  yolo.h  yoloncnn.cpp
democnn/doc/: TAK.md  Yolo_JNI.md
doc/: 1_Guidelines.md  2_Android_Studio_Setup.md  3_Android_Basics.md  4_TAK_Overview.md  5_Run_ATAK.md  6_ATAK_Plugin.md  7_ATAK_Quick_Reference.md  README.md
ml_training/: ML_Dev_doc.md  ml_guide.md
template-camera/: .gitignore  README.md
website/: .gitmodules  README.md  config.toml  go.mod  go.sum
(+3602 files in other folders)
